Bug 361130 - Layer Style: Stroke effect with big size doesn't follow correctly layer content shape
Summary: Layer Style: Stroke effect with big size doesn't follow correctly layer conte...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: layer styles (other bugs)
Version First Reported In: 2.9.11
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-03-29 09:09 UTC by Aurélien Da Campo
Modified: 2018-06-26 15:12 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Here, stroke style is applied on the black dot. (12.77 KB, image/png)
2016-03-29 09:09 UTC, Aurélien Da Campo
Details
Tests source file (336.52 KB, application/x-krita)
2016-03-29 09:16 UTC, Aurélien Da Campo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aurélien Da Campo 2016-03-29 09:09:27 UTC
Created attachment 98134 [details]
Here, stroke style is applied on the black dot.

When using the Stroke Layer Style, if the stroke size is too big compared to the shape where the style is applied on, the stoke effect doesn't follow the shape correctly. The attachment shows the problem.

Note: Tested on Krita 2.9.11 & Krita 3.0-alpha3
Comment 1 Aurélien Da Campo 2016-03-29 09:16:28 UTC
Created attachment 98135 [details]
Tests source file
Comment 2 Halla Rempt 2016-03-31 17:53:50 UTC
Hi Aurélien,

Thanks for your report and for the test file. Together I can confirm the issue.
Comment 3 Dmitry Kazakov 2018-06-09 07:43:01 UTC
Git commit 2747016a313d98c137eb5d57229e0112854b70aa by Dmitry Kazakov.
Committed on 09/06/2018 at 07:07.
Pushed by dkazakov into branch 'master'.

Connect Erode/Dilate algorithms to "Stroke" layer style

Now it is **much** faster, more roundish and doesn't eat your memory :)
Related: bug 390985
CC:kimageshop@kde.org

M  +0    -18   libs/image/layerstyles/kis_layer_style_filter_environment.cpp
M  +0    -2    libs/image/layerstyles/kis_layer_style_filter_environment.h
M  +43   -46   libs/image/layerstyles/kis_ls_stroke_filter.cpp

https://commits.kde.org/krita/2747016a313d98c137eb5d57229e0112854b70aa
Comment 4 Dmitry Kazakov 2018-06-09 14:13:05 UTC
Git commit ace6d8252a5a7b783ace53added6584f315ebe1f by Dmitry Kazakov.
Committed on 09/06/2018 at 09:00.
Pushed by dkazakov into branch 'krita/4.0'.

Connect Erode/Dilate algorithms to "Stroke" layer style

Now it is **much** faster, more roundish and doesn't eat your memory :)
Related: bug 390985
CC:kimageshop@kde.org

M  +0    -18   libs/image/layerstyles/kis_layer_style_filter_environment.cpp
M  +0    -2    libs/image/layerstyles/kis_layer_style_filter_environment.h
M  +43   -46   libs/image/layerstyles/kis_ls_stroke_filter.cpp

https://commits.kde.org/krita/ace6d8252a5a7b783ace53added6584f315ebe1f
Comment 5 Aurélien Da Campo 2018-06-12 08:42:28 UTC
Thanks a lot Dmitry :) Looking forward to try it out!
Comment 6 Andrey 2018-06-26 15:12:50 UTC
Git commit af21ce68e13621dd6a84fd64a767b68e69ec5d2f by Andrey Kamakin, on behalf of Dmitry Kazakov.
Committed on 26/06/2018 at 14:18.
Pushed by akamakin into branch 'akamakin/T8628-multithreading-optimization'.

Connect Erode/Dilate algorithms to "Stroke" layer style

Now it is **much** faster, more roundish and doesn't eat your memory :)
Related: bug 390985
CC:kimageshop@kde.org

M  +0    -18   libs/image/layerstyles/kis_layer_style_filter_environment.cpp
M  +0    -2    libs/image/layerstyles/kis_layer_style_filter_environment.h
M  +43   -46   libs/image/layerstyles/kis_ls_stroke_filter.cpp

https://commits.kde.org/krita/af21ce68e13621dd6a84fd64a767b68e69ec5d2f