Connect Erode/Dilate algorithms to "Stroke" layer style

Now it is **much** faster, more roundish and doesn't eat your memory :)

BUG:361130
BUG:390985
CC:kimageshop@kde.org